syntax = "proto3";

package helloworld;

service HelloWorld {
    rpc SayHello(HelloReq) returns (HelloRes) {}
}

message HelloReq {
    string name = 1;
}

message HelloRes {
    string msg = 1;
}